# araucana-xai

./: .gitignore  CITATION.cff  LICENSE  README.md  araucana_AI_special_issue.ipynb  araucana_CLEF_pipeline.ipynb  araucana_XAI_special_issue.ipynb  example.ipynb  main.py
araucanaxai/: README.md  example.py  setup.cfg
araucanaxai/src/araucanaxai/: __init__.py  constants.py  init.py  utils.py
araucanaxai/src/araucanaxai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
auracanaxai/: MANIFEST.in  README.md  README.rst  example.py  setup.cfg  setup.py
auracanaxai/auracanaxai/: helloworld.py
auracanaxai/src/auracanaxai/: __init__.py  constants.py  main.py  utilities.py  utils.py
auracanaxai/src/auracanaxai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: AraucanaXAI_Reliability_AIME2024.ipynb  Parameter_Tuning_MIMIC_Hepar.ipynb  araucana_extend_AIME23.ipynb
