[metadata]
name = araucanaxai
version = 0.0.1
author = Tommaso Buonocore
author_email = buonocore.tms@gmail.com
description = A novel approach for generating explanations of the predictions of a generic ML model
long_description = file: README.md
long_description_content_type = text/markdown
keywords = xai, ai
url = https://github.com/detsutut/AraucanaXAI
project_urls =
    Bug Tracker = https://github.com/detsutut/AraucanaXAI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.packages.find]
where = src